site name, toaster

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>lovable-website</title>
+  <title>Ivy Standards | Pokémon Card Grading in India</title>
+  <meta name="description"
+    content="Ivy Standards is India's premium Pokémon card grading company. Transparent, secure, and globally benchmarked grading for serious collectors." />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TXM8WNKMDS"></script>
